[package]
name = "country-parser"
description = "A simple country parser library. Currently contains all ISO 3166-1 countries."
documentation = "https://docs.rs/country-parser"
homepage = "https://github.com/Elinvynia/country-parser"
repository = "https://github.com/Elinvynia/country-parser.git"
keywords = ["country", "paser", "iso3166", "iso-3166"]
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2018"

[dependencies]
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
